--- a/style.css
+++ b/style.css
@@ -14,11 +14,14 @@ body {
     gap: 10px;
 }
 
-#screen {
+#display {
     width: 310px;
     height: 70px;
     background-color: rgba(255, 255, 255, 0.836);
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
 }
 
 button {
